--- a/flask/client/app/templates/functions.html
+++ b/flask/client/app/templates/functions.html
@@ -18,7 +18,7 @@
     <br>
     <div class="row">
     <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
+      <div class="card blue-grey darken-1 card-panel hoverable">
         <div class="card-content white-text">
           <span class="card-title">Account Now You Chosen</span>
           <p>{{ account }}</p>
