--- a/flask/client/app/templates/homepage.html
+++ b/flask/client/app/templates/homepage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Decentralized Voting App</title>
+    <title>Fedblock</title>
 
     <link href="{{ url_for('static', filename='css/materialize.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/home_styles.css') }}" rel="stylesheet">
